[package]
name = "willow"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Lazily evaluated trees"
homepage = "https://github.com/lewis-carson"
documentation = "https://github.com/lewis-carson"
repository = "https://github.com/lewis-carson"
readme = "README.md"
keywords = ["data-structure", "collection", "tree", "lazy"]

[dependencies]
indextree = "4.5.0"